# deep-mimic

./: .gitignore  README.md  README_dataset.md  README_retarget.md  README_visualizer.md  requirements.txt
jobs/: deep_mimic  deep_mimic_backflip.sh  deep_mimic_backflip_residual.sh  deep_mimic_crawl.sh  deep_mimic_crawl_residual.sh  (+12 more)
src/python/: main.py  main_retarget.py  main_selection_policy.py  main_test_model.py  main_visualizer.py  pyproject.toml  retarget.py  scripts.py  video_exporter.py  visualizer.py
src/python/multi_clip/: naive_composite_policy.py  selection_policy.py
src/python/pylocogym/: __init__.py  utils.py
src/python/pylocogym/algorithms/: __init__.py  composite_policy.py  custom_ppo.py
src/python/pylocogym/callbacks/: record_eval_callback.py  tensorboard_callback.py
src/python/pylocogym/data/: dataset.py  deep_mimic_bob_adapter.py  deep_mimic_combine_data.py  deep_mimic_dataset.py  deep_mimic_motion.py  deep_mimic_pretrained.py  forward_kinematics.py  keyframe_dataset.py  lerp_dataset.py  loop_dataset.py  vis_fk_data.py
src/python/pylocogym/envs/: MultiClipEnv.py  PylocoEnv.py  ResidualEnv.py  ResidualEnv_v0.py  ResidualEnv_v1.py  TaskEnv.py  VanillaEnv.py  __init__.py  video_recoder.py
src/python/pylocogym/envs/rewards/bob/: humanoid_retarget.py  humanoid_reward.py  humanoid_reward_task.py
src/python/pylocogym/envs/rewards/dog/: gaussian_reward.py  quadratic_reward.py
src/python/pylocogym/envs/rewards/utils/: utils.py
src/python/tests/: 01_test_quadratic_reward.py  02_test_gaussian_reward.py  03_test_human_reward.py
(+41 files in other folders)
